samples/_failures_safe/1761709456_497dd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3920fa07.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_3920fa07.c:115:59: error: expected ‘;’ at end of input
  115 |         if (mesh->vertices[i].x > mesh->bounds.max.x) mesh
      |                                                           ^
      |                                                           ;
./samples/SAFE/__tmp_3920fa07.c:115:9: error: expected declaration or statement at end of input
  115 |         if (mesh->vertices[i].x > mesh->bounds.max.x) mesh
      |         ^~
./samples/SAFE/__tmp_3920fa07.c:115:9: error: expected declaration or statement at end of input
